--- a/mtkaiolite/config
+++ b/mtkaiolite/config
@@ -1,7 +1,7 @@
 {
   "listen": ":5666",
-  "cert": "/etc/hysteria/server.crt",
-  "key": "/etc/hysteria/server.key",
+  "cert": "/etc/openvpn/easy-rsa/keys/server.crt",
+  "key": "/etc/openvpn/easy-rsa/keys/server.key",
   "up_mbps": 100,
   "down_mbps": 100,
   "disable_udp": false,
@@ -11,5 +11,5 @@
     "config": {
     "cmd": "./.auth.sh"
     }
-  },
+  }, 
 }
