--- a/Farik/config
+++ b/Farik/config
@@ -1,1 +1,13 @@
-asdasd
+{
+  "listen": ":5666",
+  "cert": "/etc/hysteria/server.crt",
+  "key": "/etc/hysteria/server.key",
+  "up_mbps": 100,
+  "down_mbps": 100,
+  "disable_udp": false,
+  "obfs": "Farik",
+  "auth": {
+    "mode": "passwords",
+    "config": ["Farik", "Farik"]
+  }
+}
